# python-scrapy-example

./: Makefile  README.md  docker-compose.yml
project/: Dockerfile  pyproject.toml
project/notebooks/: test_scrapy.ipynb
