[tool.poetry]
name = "package"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
pandas = "^2.1.4"
pyyaml = "^6.0.1"
google-cloud-bigquery = "^3.20.1"
db-dtypes = "^1.2.0"
pandas-gbq = "^0.22.0"
scrapy = "^2.11.1"
regex = "^2024.5.15"
selenium = "^4.25.0"
webdriver-manager = "^4.0.2"

[tool.poetry.dev-dependencies]
urllib3 = "1.26.16"
jupyterlab = "^4.0.0"
pytest = "^7.3.1"
pyproject-flake8 = "5.0.4"
black = "^23.3.0"
isort = "^5.10.1"
mypy = "^1.3.0"

[tool.black]
line-length = 119
include = '.pyi?$'
exclude = '''
/(
    .git
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 119
import_heading_stdlib      = "Standard Library"
import_heading_thirdparty  = "Third Party Library"
import_heading_firstparty  = "First Party Library"
import_heading_localfolder = "Local Library"

[tool.flake8]
max-line-length = 119
max-complexity = 10
ignore = "E203,E266,W503,"

[tool.mypy]
python_version = "3.11"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true
